Fix .post-completed wrapping, hopefully properly this time

--- a/app/assets/stylesheets/replies.scss
+++ b/app/assets/stylesheets/replies.scss
@@ -490,7 +490,9 @@ div.post-subheader { width: 100%; }
 /* Handle post tables */
 .post-completed {
   text-align: center;
+  min-width: 50px;
   max-width: 70px;
+  white-space: nowrap;
 }
 
 .post-check-box {
